Fix flex-basis on panel-content
This fixes layout issues on the downloads page

--- a/hsreplaynet/static/styles/components.scss
+++ b/hsreplaynet/static/styles/components.scss
@@ -1721,7 +1721,7 @@ ol.list-ltr {
 	}
 
 	.panel-content {
-		flex: 1;
+		flex: 1 1 auto;
 		border-radius: 0 0 3px 3px;
 		overflow: hidden;
 
